--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "date-fns": "^2.0.0-alpha.27",
     "react": "^16.8.6",
+    "react-datepicker": "^2.3.0",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
     "reactstrap": "^7.1.0"
