--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.6",
     "react-datepicker": "^2.3.0",
     "react-dom": "^16.8.6",
+    "react-redux": "^6.0.1",
     "react-scripts": "2.1.8"
   },
   "scripts": {
