--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-datepicker": "^2.3.0",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-multi": "^0.1.12",
