--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "redux": "^4.0.1",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.6.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "startbootstrap-sb-admin-2": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
