--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "bootstrap": "^4.3.1",
     "date-fns": "^2.0.0-alpha.27",
     "history": "^4.9.0",
+    "prettier": "^1.16.4",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-datepicker": "^2.3.0",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-multi": "^0.1.12",
