--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "date-fns": "^2.0.0-alpha.27",
     "history": "^4.9.0",
+    "moment": "^2.24.0",
     "prettier": "^1.16.4",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
