--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "date-fns": "^2.0.0-alpha.27",
+    "draft-js": "^0.10.5",
+    "draftjs-to-html": "^0.8.4",
     "history": "^4.9.0",
     "jquery.easing": "^1.4.1",
     "moment": "^2.24.0",
@@ -13,6 +15,7 @@
     "react-bootstrap": "^1.0.0-beta.6",
     "react-datepicker": "^2.3.0",
     "react-dom": "^16.8.6",
+    "react-draft-wysiwyg": "^1.13.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
