--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-multi": "^0.1.12",
