--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-draft-wysiwyg": "^1.13.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
+    "react-rte": "^0.16.1",
     "react-scripts": "2.1.8",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
