--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ deploy:
   provider: script
   script: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && docker push marcelomaia/terceirizadas_frontend
   on:
-    branch: master
+    branch: development
