--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-rte": "^0.16.1",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.0.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
