--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
-language: bash
-services: docker
-
+language: node_js
+node_js:
+  - 10
+cache:
+  directories:
+    - node_modules
 script:
+  - npm test
   - docker build -t marcelomaia/terceirizadas_frontend .
   - docker run -d -p 8080:80 marcelomaia/terceirizadas_frontend
   - docker ps -a
