--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.0.0",
     "react-rte": "^0.16.1",
     "react-scripts": "^3.0.0",
+    "react-toastify": "^5.1.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
