--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "draftjs-to-html": "^0.8.4",
     "history": "^4.9.0",
     "jquery.easing": "^1.4.1",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "prettier": "^1.16.4",
     "react": "^16.8.6",
