--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
   "devDependencies": {
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
-    "enzyme-to-json": "^3.3.5"
+    "enzyme-to-json": "^3.3.5",
+    "node-localstorage": "^1.3.1"
   },
   "setupFiles": [
     "./src/setupTests.js"
