--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "prettier": "^1.16.4",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
+    "react-burgers": "^1.3.0",
+    "react-collapse": "^4.0.3",
     "react-datepicker": "^2.3.0",
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
+    "react-motion": "^0.5.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-rte": "^0.16.1",
