--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery.easing": "^1.4.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "prettier": "^1.16.4",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
