--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
+    "redux-form-input-masks": "^2.0.1",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
