--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "draft-js": "^0.10.5",
     "draftjs-to-html": "^0.8.4",
     "history": "^4.9.0",
+    "http-status-codes": "^1.3.2",
     "jquery.easing": "^1.4.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
