--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "cypress": "^3.4.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "enzyme-to-json": "^3.3.5",
