--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ before_script:
 
 script:
   - npm test
-  - ./node_modules/.bin/prettier  --check "src/**/*.{js,jsx,scss}"
+  # - npm run-script eslint
+  - npm run-script prettier
   - docker build -t marcelomaia/terceirizadas_frontend .
   - docker run -d -p 8080:80 marcelomaia/terceirizadas_frontend
   - docker ps -a
