--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "eslint": "eslint src/",
+    "prettier": "prettier  --check 'src/**/*.{js,jsx,scss}'",
+    "prettier-fix": "prettier  --write 'src/**/*.{js,jsx,scss}'"
   },
   "eslintConfig": {
     "extends": "react-app"
