--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
     "sourceType": "module"
   },
   "plugins": ["react", "import"],
-  "rules": { "eqeqeq": "error", "yoda": "error" },
+  "rules": { "eqeqeq": "error", "yoda": "error", "react/prop-types": 0 },
   "settings": {
     "react": {
       "version": "detect"
