--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,12 @@
     "sourceType": "module"
   },
   "plugins": ["react", "import"],
-  "rules": { "eqeqeq": "error", "yoda": "error", "react/prop-types": 0 },
+  "rules": {
+    "eqeqeq": "error",
+    "yoda": "error",
+    "react/prop-types": 0,
+    "react/display-name": 0
+  },
   "settings": {
     "react": {
       "version": "detect"
