--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,9 @@
     "eqeqeq": "error",
     "yoda": "error",
     "react/prop-types": 0,
-    "react/display-name": 0
+    "react/display-name": 0,
+    "no-unused-vars": "off",
+    "no-string-refs": "off"
   },
   "settings": {
     "react": {
