- script coverage e funcao de status cancelado

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "eslint": "eslint src/",
     "eslint2": "eslint './src/**/**/**/**/*.{jsx,js}'",
     "prettier": "prettier  --check 'src/**/**/**/*.{jsx,js,scss}'",
-    "prettier-fix": "prettier  --write 'src/**/**/**/*.{jsx,js,scss}'"
+    "prettier-fix": "prettier  --write 'src/**/**/**/*.{jsx,js,scss}'",
+    "coverage": "react-scripts test --coverage --watchAll=false"
   },
   "eslintConfig": {
     "extends": "react-app"
