--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint src/",
-    "eslint2": "eslint './src/**/**/**/**/*.{jsx,js}'",
+    "eslint": "eslint './src/**/**/**/**/*.{jsx,js}'",
     "prettier": "prettier  --check 'src/**/**/**/*.{jsx,js,scss}'",
     "prettier-fix": "prettier  --write 'src/**/**/**/*.{jsx,js,scss}'",
     "coverage": "react-scripts test --coverage --watchAll=false"
