nova regra eslint, sem VAR e sim LET ou CONST

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "yoda": "error",
     "react/prop-types": 0,
     "react/display-name": 0,
+    "no-var": "error",
     "no-class-assign": "off", // TODO: investigar  essa regra.
     "react/no-string-refs": "off" // TODO: investigar  essa regra.
   },
