--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
   "name": "terceirizadas",
   "version": "0.1.3",
   "private": true,
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "branches": 2.76,
+        "functions": 1.25,
+        "lines": 2.74,
+        "statements": 2.76
+      }
+    }
+  },
   "dependencies": {
     "@khanacademy/react-multi-select": "^0.3.2",
     "axios": "^0.19.0",
