--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "husky": {
     "hooks": {
-      "pre-commit": "npm run-script prettier-fix",
+      "pre-commit": "npm run-script prettier",
       "pre-push": "npm run-script coverage && npm run-script eslint"
     }
   },
