--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@khanacademy/react-multi-select": "^0.3.2",
+    "@sentry/browser": "^5.9.1",
     "axios": "^0.19.0",
     "babel-jest": "^24.7.1",
     "bootstrap": "^4.3.1",
