--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@khanacademy/react-multi-select": "^0.3.2",
     "@sentry/browser": "^5.9.1",
+    "antd": "^3.26.4",
     "axios": "^0.19.0",
     "babel-jest": "^24.7.1",
     "bootstrap": "^4.3.1",
