--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sentry/browser": "^5.9.1",
     "antd": "^3.26.4",
     "axios": "^0.19.0",
+    "axios-mock-adapter": "^1.17.0",
     "babel-jest": "^24.7.1",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.3",
