--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "http-status-codes": "^1.3.2",
     "jquery.easing": "^1.4.1",
     "jwt-decode": "^2.2.0",
+    "locutus": "^2.0.11",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.16.4",
