--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
     "react-final-form": "^6.4.0",
+    "react-final-form-arrays": "^3.1.1",
     "react-motion": "^0.5.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
