--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-burgers": "^1.3.0",
     "react-chartjs-2": "^2.8.0",
     "react-collapse": "^4.0.3",
-    "react-datepicker": "^2.3.0",
+    "react-datepicker": "2.16.0",
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
     "react-final-form": "^6.4.0",
