--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ script:
   - npm run-script eslint
   - npm run-script prettier
   - docker build -t marcelomaia/terceirizadas_frontend .
+  - docker run -d -p 8080:80 marcelomaia/terceirizadas_frontend
+  - docker ps -a
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
