--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^2.0.0-alpha.27",
     "draft-js": "^0.10.5",
     "draftjs-to-html": "^0.8.4",
+    "file-saver": "^2.0.2",
     "final-form": "^4.19.1",
     "final-form-arrays": "^3.0.2",
     "history": "^4.9.0",
