--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-draft-wysiwyg": "^1.13.2",
     "react-final-form": "^6.4.0",
     "react-final-form-arrays": "^3.1.1",
+    "react-final-form-listeners": "^1.0.2",
     "react-motion": "^0.5.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.2.0",
