--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jwt-decode": "^2.2.0",
     "locutus": "^2.0.11",
     "moment": "^2.24.0",
+    "multiselect-react-dropdown": "^2.0.1",
     "node-sass": "^4.12.0",
     "patch-package": "^6.2.2",
     "prettier": "^1.16.4",
