--- a/package.json
+++ b/package.json
@@ -111,11 +111,14 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "enzyme-to-json": "^3.3.5",
     "fetch-mock": "^8.3.0",
     "husky": "^3.0.9",
+    "msw": "^0.35.0",
     "node-localstorage": "^1.3.1"
   },
   "setupFiles": [
