--- a/.github/workflows/Dev-CI-CD.yml
+++ b/.github/workflows/Dev-CI-CD.yml
@@ -54,7 +54,8 @@ jobs:
           password: ${{ secrets.REGISTRY_PWD }}
     
       - name: Build the Docker image    
-        run: | 
+        run: |
+             docker login ${{ secrets.REGISTRY_HOST }}
              docker build . --tag ${{ secrets.REGISTRY_HOST }}/${GITHUB_REF##*/}/sigpae-frontend
              docker push ${{ secrets.REGISTRY_HOST }}/${GITHUB_REF##*/}/sigpae-frontend
              
